--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "antd": "^3.5.0",
     "axios": "^0.18.0",
     "material-ui": "^0.20.0",
+    "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-moment": "^0.7.0",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
